example_app/details-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: details
spec:
  hosts:
  - details
  http:
    - route:
      - destination:
          host: details
      retries:
        attempts: 2
        perTryTimeout: 5s
        retryOn: 5xx
