example_app/productpage-canary-70-30.yaml
apiVersion: networking.istio.io/v1alpha3 
kind: DestinationRule 
metadata: 
  name: productpage 
spec: 
  host: productpage 
  trafficPolicy: 
    tls: 
      mode: ISTIO_MUTUAL 
  subsets: 
    - name: v1 
      labels: 
        version: v1 
    - name: v2 
      labels: 
        version: v2 

---
apiVersion: networking.istio.io/v1alpha3 
kind: VirtualService 
metadata: 
  name: bookinfo 
spec: 
  hosts: 
    - bookinfo.local 
  gateways: 
    - bookinfo-gateway 
  http:
    # Fix each user that has seen v2 to v2 with cookie
    - route:
        - destination: 
           host: productpage 
           subset: v2
           port: 
             number: 9080
      match:
        - headers:
            cookie:
              regex: "^(.*?;)?(product-page=v2)(;.*)?$"

    - route: 
        - destination: 
            host: productpage 
            subset: v1 
            port: 
              number: 9080 
          weight: 70
        - destination: 
            host: productpage 
            subset: v2
            port: 
              number: 9080 
          weight: 30
